--- a/pre-assessment/index.html
+++ b/pre-assessment/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html>
+<html lang="en">
 <head>
 <meta charset="UTF-8" lang="en">
 <!--Meta charset specifies the character encoding for the HTML document and meta lang defines the default language. In this case, it's English-->
-<meta name="author" content="Kennedy Parks" />
+<meta name="author" content="Kennedy Parks">
 <!--Meta name and content is used to define keywords and descriptions for the website-->
 <link rel="stylesheet" href="assets/css/screen.css">
 <title>Kennedy Parks</title>
@@ -23,7 +23,7 @@
   </div>
   <div id="content">
     <h2>My Assessment</h2> <!--Hey Thomas!-->
-    <img src="assets/img/content-image2.jpg">
+    <img src="assets/img/content-image2.jpg" alt="Jonathan Goldsmith posing with a bottle of Dos Equis with the text 'I don't always use responsive design, but when I do, my mobile visitors can actually become customers' overlayed on top.">
     <p>The most important goal of effective communication is clarity. Clarity is not the same as simplicity . Often, simple things are clear if the message is intended to be brief and small, but often the message is about a complex relationship that can only be presented with a necessarily large amount of data. </p>
     <div class="alert">
       <p>This complexity can be made to appear clear by effective organization and presentation and need not be reduced to meaningless "bite-sized" chunks of data, as simplification usually does. </p>
@@ -44,10 +44,10 @@
       is a description language used to structure documents on the web.
     </p>
     <h4>Provide an example of link pointing to your favorite site &amp; create a style rule to change the background color of the link when the user hovers over it. </h4>
-    <a href="https://www.codecademy.com/" target="_blank"><button class="button">Codecademy</button></a>
+    <div class="button"><a href="https://www.codecademy.com/" target="_blank">Codecademy</a></div>
   </div>
   <div id="footer">
-    <h6>Kennedy Parks 2023 &copy; <a href="#header">Back to Top</h6></a>
+    <h6>Kennedy Parks 2023 &copy; <a href="#header">Back to Top</a></h6>
   </div>
 </div>
 </body>
