--- a/pre-assessment/index.html
+++ b/pre-assessment/index.html
@@ -47,7 +47,7 @@
     <div class="button"><a href="https://www.codecademy.com/" target="_blank">Codecademy</a></div>
   </div>
   <div id="footer">
-    <h6>Kennedy Parks 2023 &copy; <a href="#header">Back to Top</a></h6>
+    <h6>Kennedy Parks 2023 &copy; <a href="https://validator.w3.org/nu/?doc=https%3A%2F%2Fkennedyparks.github.io%2Fifsc-3342%2Fpre-assessment%2Findex.html" target="_blank">Validation Results</a> <a href="#header">Back to Top</a></h6>
   </div>
 </div>
 </body>
