--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
 <body>
-   <h1>Kennedy Parks</h1> 
+   <h1>Kennedy Parks - Mobile Web Development</h1> 
    <a href="pre-assessment/index.html">Pre-Assessment</a>
+   
 </body>
 </html>
