Grid and queries

--- a/index.html
+++ b/index.html
@@ -8,11 +8,21 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;600;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Kennedy Parks - Mobile Web Development</title>
 </head>
 <body>
-   <h1>Kennedy Parks - Mobile Web Development</h1> 
-   <a href="pre-assessment/index.html">Pre-Assessment</a>
+
+   <section class="header">
+    <h1>Kennedy Parks - Mobile Web Development</h1> 
+   </section>
+
+   <section class="container">
+    <div class="row">
+        <a href="pre-assessment/index.html" class="col">Pre Assessment</a>
+        <a href="grid/index2.html" class="col">Static grid</a>
+        <a href="dynamic-grid/index.html" class="col">Dynamic grid</a>
+    </div>
+  </div>
    
 </body>
 </html>
