--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <a href="pre-assessment/index.html" class="col">Pre Assessment</a>
         <a href="grid/index2.html" class="col">Static grid</a>
         <a href="dynamic-grid/index.html" class="col">Dynamic grid</a>
+        <a href="resume/index.html" class="col">Resume</a>
     </div>
   </div>
    
