--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <a href="grid/index2.html" class="col">Static grid</a>
         <a href="dynamic-grid/index.html" class="col">Dynamic grid</a>
         <a href="flexbox-froggy/index.html" class="col">Flexbox Froggy</a>
-        <a href="resume/index.html" class="col">Resume</a>
+        <a href="resume/index.html" class="col">Responsive Resume</a>
         <a href="css-grid-exercise-1/index.html" class="col">CSS Grid Exercise 1</a>
         <a href="final-site/index.html" class="col">Final Site</a>
     </div>
