--- a/resume/index.html
+++ b/resume/index.html
@@ -64,9 +64,9 @@
     
           </dl>
           <ul class="related-links">
-          <li><a itemprop="url" rel="me" target="_blank" alt="Github" href="https://github.com/KennedyParks"><img src="assets/img/github.png" width="50px"></a></li>
-          <li><a itemprop="url" rel="me" target="_blank" alt="Linkedin" href="https://www.linkedin.com/in/kennedy-p-570860133/"><img src="assets/img/linkedin.png" width="50px"></a></li>
-          <li><a itemprop="url" rel="me" target="_blank" alt="Resume" href="https://static1.squarespace.com/static/616344cedcf8b409ba8ec99d/t/63f44d6416cb4e5cd2c22253/1676955067230/Kennedy-Parks-Resume"><img src="assets/img/contract.png" width="50px"></a></li>
+          <li><a itemprop="url" rel="me" target="_blank" alt="Github" href="https://github.com/KennedyParks"><img src="assets/img/211904_social_github_icon (1).png" width="50px"></a></li>
+          <li><a itemprop="url" rel="me" target="_blank" alt="Linkedin" href="https://www.linkedin.com/in/kennedy-p-570860133/"><img src="assets/img/317750_linkedin_icon.png" width="50px"></a></li>
+          <li><a itemprop="url" rel="me" target="_blank" alt="Resume" href="https://www.kennedyjparks.com/resume"><img src="assets/img/7218126_resume_business_cv_work_job_icon.png" width="50px"></a></li>
           </ul>
         </section>
         
@@ -124,13 +124,13 @@
         <section id="education">
           <h2>Education</h2>
           <article class="certificate" itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
-            <h3 itemprop="description"><abbr title="Master of Science">BS </abbr>Web Design and Development</h3>
+            <h3 itemprop="description"><abbr title="Master of Science"> </abbr>BS Web Design and Development</h3>
               <span itemprop="name">University of Arkansas at Little Rock</span>
               <span itemprop="location" itemscope>Little Rock, AR</span>
               <span>2022-Present</span>
           </article>
           <article class="certificate" itemprop="alumniOf" itemscope itemtype="http://schema.org/EducationalOrganization">
-            <h3 itemprop="description"><abbr title="Master of Science">BFA </abbr>New Media Design</h3>
+            <h3 itemprop="description"><abbr title="Master of Science"></abbr>BFA New Media Design</h3>
               <span itemprop="name">Rochester Institute of Technology</span>
               <span itemprop="location" itemscope>Rochester, NY</span>
               <span>2019-2020</span>
@@ -142,6 +142,7 @@
         <div id="copyright">
           &copy; 2023 Kennedy Parks
         </div>
+        <a href="#top">Back to top</a>
       </footer>
 
 
