--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
         <a href="final-site/index.html" class="col">Final Site</a>
         <a href="scss-demo/index.html" class="col">SCSS Demo</a>
         <a href="scss/index.html" class="col">SCSS</a>
+        <a href="scss/index.html" class="col">Bootstrap Rapid Prototype</a>
+        <a href="scss/index.html" class="col">Reponsive Images</a>
+        <a href="scss/index.html" class="col">Audio/Video</a>
+        <a href="scss/index.html" class="col">Final Project</a>
     </div>
   </div>
    
