--- a/index.html
+++ b/index.html
@@ -24,13 +24,12 @@
         <a href="flexbox-froggy/index.html" class="col">Flexbox Froggy</a>
         <a href="resume/index.html" class="col">Responsive Resume</a>
         <a href="css-grid-exercise-1/index.html" class="col">CSS Grid Exercise 1</a>
-        <a href="final-site/index.html" class="col">Final Site</a>
         <a href="scss-demo/index.html" class="col">SCSS Demo</a>
         <a href="scss/index.html" class="col">SCSS</a>
-        <a href="scss/index.html" class="col">Bootstrap Rapid Prototype</a>
-        <a href="scss/index.html" class="col">Reponsive Images</a>
-        <a href="scss/index.html" class="col">Audio/Video</a>
-        <a href="scss/index.html" class="col">Final Project</a>
+        <a href="bootstrap-rapid-prototype/index.html" class="col">Bootstrap Rapid Prototype</a>
+        <a href="responsive-images/index.html" class="col">Reponsive Images</a>
+        <a href="audio-video/index.html" class="col">Audio/Video</a>
+        <a href="final-site/index.html" class="col">Final Site</a>
     </div>
   </div>
    
